--- a/gradle.properties
+++ b/gradle.properties
@@ -1,1 +1,7 @@
 kotlin.code.style=official
+
+kotlin.incremental=true
+kotlin.mpp.incremental=true
+kotlin.mpp.stability.nowarn=true
+
+kotlin.js.yarn=false
